--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     font-family: "PT Sans", Calibri, Tahoma, sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: -var(slate-500);
+    color: white;
     background-color: var(--slate-800);
 }
 
