--- a/style.css
+++ b/style.css
@@ -44,6 +44,12 @@ body {
     padding: 0.5em 1em;
 }
 
+.navbar-toggler {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+
 @media screen and (min-width: 768px) {
     .navbar-brand img {
         width: 100px;
