--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
     src: url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 }
 
+@font-face {
+    font-family: "Inter";
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+}
+
 /* Reset default styles */
 * {
     margin: 0;
@@ -13,11 +18,11 @@
 
 /* Global styles */
 body {
-    font-family: "PT Sans", Calibri, Tahoma, sans-serif;
+    font-family: "Inter", sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    color: white;
-    background-color: var(--slate-800);
+    color: var(--slate-800);
+    /* background-color: var(--slate-800); */
 }
 
 :root {
@@ -29,6 +34,31 @@ body {
     font-family: "Anton", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+/* Animation */
+@keyframes slideInRight {
+    0% {
+      transform: translateX(100%);}
+    100% {
+      transform: translateX(0);
+    }
+}
+
+@keyframes slideUp {
+    0% {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/* Header */
+header {
+    animation: 0.8s ease-out 0s 1 slideInRight;
 }
 
 /* Navbar */
@@ -48,6 +78,20 @@ body {
     outline: none;
     border: none;
     box-shadow: none;
+}
+
+/* Body */
+.hero-text {
+    opacity: 0;
+    animation: 1.5s ease-out 1.5s 1 slideUp forwards;
+}
+
+/* Footer */
+.footer {
+    background-color: #ffffff;
+    padding: 2em 0;
+    text-align: center;
+    background-color: var(--slate-800);
 }
 
 @media screen and (min-width: 768px) {
